2007-05-18  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-server.scm
	  Unsafe implementation of kahua-write-static-file.

2007-04-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.3 released.

2007-04-26  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/elem.scm, src/kahua/server.scm
	  Fix wrong format of entity reference node(&, &:, &/).

2007-04-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: check.scm
	  Change: configure.ac
	  Check Gauche version and its threading type, and
	  system thread type on Linux.

2007-04-23  Tatsuya BIZENN  <bizenn@arthub.net>

	* Merge: from HEAD.
	  ChangeLog entries from 2007-03-07 to 2007-04-20 are
	  merged from HEAD.

2007-04-20  Katsutoshi Itoh <cut-sea@kahua.org>

	* Fix: src/persistent.scm
	  bug fix for make-kahua-collection with :index :any.
	  When make-kahua-collection with :index :any, then,
	  index cache was destroyed.
	
2007-04-19  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: emacs/kahua.el.in
	  Now default "kahua-site-bundle" value is nil.
	  If it's nil, it means that kahua command is
	  invoked without -S option.

2007-04-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-httpd.scm, cgi/kahua.cgi.in
	  Support X-Forwarded-For HTTP header.
	  If X-Forwarded-For header in HTTP request, it
	  adds to x-kahua-metavariables as "HTTP_X_FORWARDED_FOR"
	  record, and its first (leftmost) address is set
	  to x-kahua-remote-addr.  Note that REMOATE_ADDR
	  in x-kahua-metavariables is not changed.
	  NB: this feature is not tested yet.

2007-04-12  Katsutoshi Itoh <cut-sea@kahua.org>

	* Fix: src/kahua/server.scm
	  bug fix for kahua-cookie-ref at the case that
	  return #f from (kahua-meta-ref "HTTP_COOKIE").

2007-04-11  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  Now if "return-cont" keyword parameter is passed to entry,
	  the entry can pass it as "remote-cont" value.

2007-04-11  Katsutoshi Itoh <cut-sea@kahua.org>
